--- a/facebook4j-core/pom.xml
+++ b/facebook4j-core/pom.xml
@@ -1,8 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.facebook4j</groupId>
+  <parent>
+    <groupId>org.facebook4j</groupId>
+    <artifactId>facebook4j</artifactId>
+    <version>2.2.1-MAR-CUSTOM-1</version>
+  </parent>
   <artifactId>facebook4j-core</artifactId>
-  <version>2.2.1-SNAPSHOT</version>
+  <version>2.2.1-MAR-CUSTOM-1</version>
   <packaging>jar</packaging>
   <name>facebook4j-core</name>
   <description>A Java library for the Facebook Graph API</description>
@@ -46,20 +50,6 @@
       <archive>http://groups.google.com/group/facebook4j</archive>
     </mailingList>
   </mailingLists>
-  <distributionManagement>
-    <repository>
-      <id>sonatype-nexus-staging</id>
-      <name>Nexus Release Repository</name>
-      <uniqueVersion>false</uniqueVersion>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-    <snapshotRepository>
-      <id>sonatype-nexus-snapshots</id>
-      <name>Nexus Snapshots Repository</name>
-      <uniqueVersion>false</uniqueVersion>
-      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-    </snapshotRepository>
-  </distributionManagement>
 
   <dependencies>
     <dependency>
