--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.facebook4j</groupId>
   <artifactId>facebook4j</artifactId>
-  <version>2.2.1-SNAPSHOT</version>
+  <version>2.2.1-MAR-CUSTOM-1</version>
   <packaging>pom</packaging>
   <name>facebook4j</name>
   <description>A Java library for the Facebook Graph API</description>
@@ -48,17 +48,10 @@
   </mailingLists>
   <distributionManagement>
     <repository>
-      <id>sonatype-nexus-staging</id>
-      <name>Nexus Release Repository</name>
-      <uniqueVersion>false</uniqueVersion>
-      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        <id>chimeo_dep</id>
+        <url>http://remote.senti1.com:8086/nexus/content/repositories/chimeo_dep</url>
+        <name>Chimeo Dependencies</name>
     </repository>
-    <snapshotRepository>
-      <id>sonatype-nexus-snapshots</id>
-      <name>Nexus Snapshots Repository</name>
-      <uniqueVersion>false</uniqueVersion>
-      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
-    </snapshotRepository>
   </distributionManagement>
   <profiles>
     <profile>
